tests/snapshot/error/source_locations/statement/for_await/async_iterator_close_finish_module.exp
TypeError: AsyncFromSyncIterator.prototype.return method must return an object
   ┌ source_locations/statement/for_await/async_iterator_close_finish_module.js:15:20
   |
15 |   for await (var x of iterable) {
   |                    ^
Stack trace:
  at return (<native>)
  at foo (source_locations/statement/for_await/async_iterator_close_finish_module.js:15:20)